--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <main class="flex">
-      <nav class="flex w-full">
+      <nav class="flex">
         <div class="w-64 p-4 h-screen bg-gray-600 sticky top-0" >
           <div class="flex" >
             <%= image_tag 'logo.png', class: 'w-16' %>
@@ -23,27 +23,29 @@
             <li>
               <%= link_to admin_path, class: "block py-2 px-4 hover:rounded hover:bg-gray-700" do %>
                <%= icon('fa-solid', 'gauge-high', class: "mr-2") %><span class="hidden md:inline-block" >Dashboard</span>
-              <%end  %>
+              <%end%>
             </li>
              <li>
               <%= link_to admin_path, class: "block py-2 px-4 hover:rounded hover:bg-gray-700" do %>
                <%= icon('fa-solid', 'cart-shopping', class: "mr-2") %><span class="hidden md:inline-block" >Products</span>
-              <%end  %>
+              <%end%>
             </li>
              <li>
-              <%= link_to admin_path, class: "block py-2 px-4 hover:rounded hover:bg-gray-700" do %>
+              <%= link_to admin_categories_path, class: "block py-2 px-4 hover:rounded hover:bg-gray-700" do %>
                <%= icon('fa-solid', 'list', class: "mr-2") %><span class="hidden md:inline-block" >Categories</span>
-              <%end  %>
+              <%end%>
             </li>
              <li>
               <%= link_to admin_path, class: "block py-2 px-4 hover:rounded hover:bg-gray-700" do %>
                <%= icon('fa-solid', 'truck-fast', class: "mr-2") %><span class="hidden md:inline-block" >Orders</span>
-              <%end  %>
+              <%end%>
             </li>
           </ul>
         </div>
       </nav>
-      <%= yield %>
+      <div class="w-full p-8">
+        <%= yield %>
+      </div>
     </main>
   </body>
 </html>
